src/objects/OWF_Assignment_Setting__mdt.object
<CustomObject>
    <description>OWF-MC-ESPSFDCQI-2172</description>
    <fields>
        <fullName>Agreement_Record_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Agreement Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automation_backup_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Automation backup flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automation_initial_bid_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Automation initial bid flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automation_manual_triage_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Automation manual triage flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Complexity__c</fullName>
        <label>Bid Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_Score__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Complexity Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_availability_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Disable availability flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_End_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Field - End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Start_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Field - Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Ranking_Level__c</fullName>
        <description>OWF-IQVIAPSA-1317 Adding Grid ranking level for GBO-Bid Grid</description>
        <label>Grid Ranking Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_FTE_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Ignore FTE Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of business comma separated list to exclude from assignment automation.</description>
        <label>Line of Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matching_Point_BD_Lead_Sub_Region__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - BD Lead Sub Region</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Customer__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Customer</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Grade_Level__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Grade Level</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Indication__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Indication</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Intervention_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Intervention Type</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Line_of_Business__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Line of Business</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Phase__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Phase</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Potential_Regions__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Potential Regions</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Targeted_Countries__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Targeted Countries</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Therapeutic_Area__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Therapeutic Area</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Threshold__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point Threshold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matching_Point_Workload_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Matching Point - Workload Ranking</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_FTE__c</fullName>
        <label>New FTE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>RFP Ranking</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Resource Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Sub Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_FTE__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Suggested FTE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triage_Level__c</fullName>
        <description>IQVIAPSA-2165 - RFI Agreement / GBO-RFI sub Group Triage Level &amp; FTE update</description>
        <label>Triage Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level A Experience or Staffing</fullName>
                    <default>true</default>
                    <label>Level A Experience or Staffing</label>
                </value>
                <value>
                    <fullName>Level B Supplier Qualification Audit</fullName>
                </value>
                <value>
                    <fullName>Level C Standalone Requests for Information</fullName>
                </value>
                <value>
                    <fullName>Level D Requests for Information as part of an RFP</fullName>
                </value>
                <value>
                    <fullName>Level E Strategic Requests for Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Adjusted_End_Days__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Value - Adjusted End Days</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Adjusted_Start_Days__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Value - Adjusted Start Days</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workload_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2172</description>
        <label>Workload Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OWF Assignment Setting</label>
    <pluralLabel>OWF Assignment Settings</pluralLabel>
</CustomObject>